# got

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ISSUES.md  PLAN.md  PRODUCTION.md  README.md  REFACTOR.md  SECURITY_AUDIT.md  firebase.json  package-lock.json  values.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
crates/got-attest/: Cargo.toml
crates/got-attest/src/: lib.rs
crates/got-cli/: Cargo.toml
crates/got-cli/src/: main.rs
crates/got-core/: Cargo.toml
crates/got-core/src/: coherence.rs  geometry.rs  lib.rs  manifold.rs
crates/got-enclave/: Cargo.toml
crates/got-enclave/src/: capture.rs  enclave.rs  lib.rs
crates/got-incoherence/: Cargo.toml
crates/got-incoherence/src/: category.rs  coherence.rs  compare.rs  curvature.rs  embeddings.rs  lib.rs  report.rs  visual.rs
crates/got-net/: Cargo.toml
crates/got-net/src/: attestation_cache.rs  client.rs  codec.rs  error.rs  federation_sync.rs  http_sync.rs  lib.rs  server.rs  transport.rs
crates/got-net/tests/: integration.rs
crates/got-probe/: Cargo.toml
crates/got-probe/src/: experiment.rs  hooks.rs  intervention.rs  lib.rs
crates/got-proxy/: Cargo.toml
crates/got-proxy/src/: attestation.rs  config.rs  deviation.rs  lib.rs  session.rs  store.rs  value_space.rs
crates/got-proxy/tests/: integration.rs
crates/got-store/: Cargo.toml
crates/got-store/src/: audit.rs  file_store.rs  lib.rs  memory_store.rs  store.rs
crates/got-web/: Cargo.toml
crates/got-web/src/: api.rs  attestation_api.rs  chat_api.rs  demo.rs  embed_api.rs  lib.rs  main.rs  metrics_api.rs  proxy_api.rs  store_api.rs
crates/got-web/static/: index.html
crates/got-web/static/css/: analyse.css  base.css
crates/got-web/static/js/: api.js  app.js
crates/got-web/static/js/analyse/: timeline.js  verdict.js  viz-chord.js  viz-contradictions.js  viz-heatmap.js  viz-manifold.js  viz-sphere.js
crates/got-web/static/js/shared/: colors.js  utils.js
crates/got-wire/: Cargo.toml
crates/got-wire/src/: behavioral.rs  certificate.rs  chain.rs  domain.rs  envelope.rs  exchange.rs  federation.rs  frame.rs  governance.rs  lib.rs  noise.rs  registry.rs  taxonomy.rs
data/: EXPERIMENT-REPORT.md  attestation.json  import-payload.json  probes-layer4.json  synthetic.gotact  synthetic.gotue  test-key  test-key.pub
data/activations/: Qwen_Qwen2.5-0.5B-Instruct_geometry.json  Qwen_Qwen2.5-0.5B_geometry.json  TinyLlama_TinyLlama-1.1B-Chat-v1.0_geometry.json  TinyLlama_TinyLlama-1.1B-intermediate-step-1431k-3T_geometry.json
data/demo/: activations.gotact  attestation.json  demo_conversation.json  embeddings.json  key  key.pub  labels.txt  message_embeddings.json  model.gotue  probe_layer0.json
data/demo/store/: index.json
data/models/: comparison-results.json  control-experiment.json  curvature-results.json  demo-conversation-layer8.json  extraction-summary.json  gpt2-demo-conversation.json  gpt2-medium-term-analysis.json  gpt2-message-embeddings.json  gpt2-term-analysis.json  gpt2-vocab.json  gpt2.gotact  qwen2.5-0.5b-instruct-term-analysis.json  qwen2.5-0.5b-instruct-vocab.json  qwen2.5-0.5b-term-analysis.json  stablelm-base-term-analysis.json  stablelm-base-vocab.json  stablelm-tuned-term-analysis.json  stablelm-tuned-vocab.json  tinyllama-base-term-analysis.json  tinyllama-chat-term-analysis.json  tinyllama-chat-vocab.json
data/probes/: activations_compassion.gotact  activations_courage.gotact  activations_fairness.gotact  activations_honesty.gotact  probe_compassion.json  probe_courage.json  probe_fairness.json  probe_honesty.json  probe_transfer_Qwen2.5-0.5B_vs_Qwen2.5-0.5B-Instruct.json  probe_transfer_TinyLlama-1.1B-intermediate-step-1431k-3T_vs_TinyLlama-1.1B-Chat-v1.0.json  probe_transfer_gpt2-medium_vs_gpt2-medium.json  probe_transfer_gpt2_vs_gpt2.json  probes_layer8.json
docs/: agent-domain-configurations.md  architecture-agent-protocol.md  architecture-code.md  architecture-deployment.md  architecture-diagram.md  architecture-flows.md  architecture-layers.md  architecture-motherboard.md  architecture-sequences.md  enclave-adapter-contract.md  trust-registry-configuration.md
scripts/: README.md  activation_server.py  analyse_centering.py  analyse_debiasing.py  analyse_gpt2_geometry.py  build_gpt2_demo.py  check_drift.py  compare_activations.py  compare_models.py  control_experiment.py  curvature_analysis.py  demo_pipeline.sh  extract_activations.py  extract_gguf_unembedding.py  extract_gpt2_demo.py  extract_models.py  extract_sae_features.py  extract_single_shard.py  generate_message_embeddings.py  generate_synthetic_data.py  inject_and_generate.py  inspect_conv.py  inspect_terms.py  layer_sweep.py  probe_transfer.py  rlhf_comparison.py  rlhf_comparison_report.py  run_server.sh  save_vocab.py  start_web.sh  test_api.py  test_real_api.py  test_real_models.py  test_zscore.py  tied_embeddings_experiment.py  trace_coherence.py  train_sae.py  train_value_probes.py
taxonomies/: got-reference-v1.toml
tests/: integration.rs
