[package]
name = "got-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
got-core = { path = "../got-core" }
got-probe = { path = "../got-probe" }
got-attest = { path = "../got-attest" }
got-wire = { path = "../got-wire" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
zeroize = "1"
