[package]
name = "got-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
got-core = { path = "../got-core" }
got-incoherence = { path = "../got-incoherence" }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
