[package]
name = "got-store"
version = "0.1.0"
edition = "2021"

[dependencies]
got-core = { path = "../got-core" }
got-attest = { path = "../got-attest" }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
