[package]
name = "got-web"
version = "0.1.0"
edition = "2021"

[dependencies]
got-core = { path = "../got-core" }
got-incoherence = { path = "../got-incoherence" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
