[package]
name = "got-web"
version = "0.1.0"
edition = "2021"

[dependencies]
got-core = { path = "../got-core" }
got-probe = { path = "../got-probe" }
got-attest = { path = "../got-attest" }
got-incoherence = { path = "../got-incoherence" }
got-proxy = { path = "../got-proxy" }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
faer = "0.19"
toml = "0.8"
