[package]
name = "got-wire"
version = "0.1.0"
edition = "2021"

[dependencies]
got-core = { path = "../got-core" }
got-attest = { path = "../got-attest" }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "1"
rand = "0.8"
snow = "0.10"
curve25519-dalek = "4"

[dev-dependencies]
tempfile = "3"
